fix images being too big

--- a/styles/blog.css
+++ b/styles/blog.css
@@ -13,12 +13,9 @@ code {
     border-radius: 8px;
 }
 
-/* img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-} */
+img {
+    max-width: 100%;
+}
 
 .smol {
     font-size: small;
